--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-はるとのばーか
-はるとのばーかばーか
-だいきちのあほー！
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>スマホサイト</title>
+</head>
+<body>
+    悪口なんてかいてないよ！
+</body>
+</html>
