--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>スマホ用サイト</title>
 </head>
+
 <body>
-    abc
+    <h1>ハンドルネーム</h1>
+    <p>ricky_sensei</p>
+    <h1>特技</h1>
+    <h2>イケメン</h2>
+    
 </body>
+
 </html>
