--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
 </head>
 
 <body>
-    <h1>ハンドルネーム</h1>
-    <p>ricky_sensei</p>
-    <h1>特技</h1>
-    <h2>イケメン</h2>
-    
+    <h1>スマホサイトだよー</h1>
 </body>
 
 </html>
