--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
 </head>
 
 <body>
-    <img src="./img/item1.jpg" alt="">
+    <h1>
+        <a href="index.html"><img src="./img/logo.svg" alt="ロゴだよ！"></a>
+    </h1>
+
+    <nav>
+        <ul>
+            <li>
+                <a href="products.html">PRODUCTS</a>
+            </li>
+            <li>
+                <a href="about.html">ABOUT</a>
+            </li>
+            <li>
+                <a href="company.html">COMPANY</a>
+            </li>
+            <li>
+                <a href="contact.html">CONTACT</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 
 </html>
