--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>スマホ用サイト</title>
     <!-- css読み込み -->
     <link rel="stylesheet" href="style/style.css">
+    
     <link rel="icon" href="img/favicon.ico">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+    <script src="js/main.js"></script>
 </head>
 
 <body>
@@ -34,6 +35,13 @@
             </li>
         </ul>
     </nav>
+    <footer id="footer" class="wrapper">
+        <ul>
+            <li><a href="https://www.instagram.com/">インスタ</a></li>
+            <li><a href="https://x.com/">エックス</a></li>
+            <li><a href="https://facebook.com/">フェイスブック</a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
