英語表記にしたよ！

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>スマホ用サイト</title>
     <!-- css読み込み -->
     <link rel="stylesheet" href="style/style.css">
-    
     <link rel="icon" href="img/favicon.ico">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -37,9 +36,9 @@
     </nav>
     <footer id="footer" class="wrapper">
         <ul>
-            <li><a href="https://www.instagram.com/">インスタ</a></li>
-            <li><a href="https://x.com/">エックス</a></li>
-            <li><a href="https://facebook.com/">フェイスブック</a></li>
+            <li><a href="https://www.instagram.com/">instagram</a></li>
+            <li><a href="https://x.com/">X</a></li>
+            <li><a href="https://facebook.com/">Facebook</a></li>
         </ul>
     </footer>
 </body>
