--- a/index.html
+++ b/index.html
@@ -14,31 +14,107 @@
 </head>
 
 <body>
-    <h1>
-        <a href="index.html"><img src="./img/logo.svg" alt="ロゴだよ！"></a>
-    </h1>
+    <header>
+        <h1>
+            <a href="index.html"><img src="./img/logo.svg" alt="ロゴだよ！"></a>
+        </h1>
 
-    <nav>
-        <ul>
-            <li>
-                <a href="products.html">PRODUCTS</a>
-            </li>
-            <li>
-                <a href="about.html">ABOUT</a>
-            </li>
-            <li>
-                <a href="company.html">COMPANY</a>
-            </li>
-            <li>
-                <a href="contact.html">CONTACT</a>
-            </li>
-        </ul>
-    </nav>
+        <nav>
+            <ul>
+                <li id="red">
+                    <a href="products.html">PRODUCTS</a>
+                </li>
+                <li>
+                    <a href="about.html">ABOUT</a>
+                </li>
+                <li>
+                    <a href="company.html">COMPANY</a>
+                </li>
+                <li>
+                    <a href="contact.html">CONTACT</a>
+                </li>
+            </ul>
+        </nav>
+
+        <div>
+            <span></span>
+            <span></span>
+        </div>
+
+        <div></div>
+    </header>
+
+    <main>
+        <div>
+            <ul>
+                <li>
+                    <a href="item1.html">
+                        <img src="img/item1.jpg" alt="">
+                    </a>
+                    <p>いすだよ</p>
+                    <p>&yen;99,999</p>
+                </li>
+                <li>
+                    <a href="item2.html">
+                        <img src="img/item2.jpg" alt="">
+                    </a>
+                    <p>いすだよ</p>
+                    <p>&yen;99,999</p>
+                </li>
+                <li>
+                    <a href="item3.html">
+                        <img src="img/item3.jpg" alt="">
+                    </a>
+                    <p>いすだよ</p>
+                    <p>&yen;99,999</p>
+                </li>
+                <li>
+                    <a href="item4.html">
+                        <img src="img/item4.jpg" alt="">
+                    </a>
+                    <p>いすだよ</p>
+                    <p>&yen;99,999</p>
+                </li>
+                <li>
+                    <a href="item5.html">
+                        <img src="img/item5.jpg" alt="">
+                    </a>
+                    <p>いすだよ</p>
+                    <p>&yen;99,999</p>
+                </li>
+                <li>
+                    <a href="item6.html">
+                        <img src="img/item6.jpg" alt="">
+                    </a>
+                    <p>いすだよ</p>
+                    <p>&yen;99,999</p>
+                </li>
+                <li>
+                    <a href="item7.html">
+                        <img src="img/item7.jpg" alt="">
+                    </a>
+                    <p>いすだよ</p>
+                    <p>&yen;99,999</p>
+                </li>
+                <li>
+                    <a href="item8.html">
+                        <img src="img/item8.jpg" alt="">
+                    </a>
+                    <p>いすだよ</p>
+                    <p>&yen;99,999</p>
+                </li>
+                <a href="products.html">view more</a>
+            </ul>
+
+        </div>
+    </main>
+
     <footer id="footer" class="wrapper">
         <ul>
             <li><a href="https://www.instagram.com/">instagram</a></li>
             <li><a href="https://x.com/">X</a></li>
             <li><a href="https://facebook.com/">Facebook</a></li>
+
         </ul>
     </footer>
 </body>
