--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 <body>
     <header>
         <h1>
-            <a href="index.html"><img src="./img/logo.svg" alt="ロゴだよ！"></a>
+            <a href="index.html">
+                <img src="./img/logo.svg" alt="ロゴだよ！">
+            </a>
         </h1>
-
+        
         <nav>
             <ul>
                 <li id="red">
-                    <a href="products.html">PRODUCTS</a>
+                    <a href="products.html" id="shouhin_1">PRODUCTS</a>
                 </li>
                 <li>
                     <a href="about.html">ABOUT</a>
@@ -45,13 +47,13 @@
     </header>
 
     <main>
-        <div>
+        <div class="wrapper">
             <ul>
                 <li>
                     <a href="item1.html">
                         <img src="img/item1.jpg" alt="">
                     </a>
-                    <p>いすだよ</p>
+                    <p id="shouhin_1">いすだよ</p>
                     <p>&yen;99,999</p>
                 </li>
                 <li>
