商品ページ完成

--- a/test.html
+++ b/test.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>商品１ ・ future design</title>
-    <meta name="description" content="テキストテキストテキストテキストテキストテキストテキスト">
+    <title>商品1 . future design</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="img/favicon.ico">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="style/style.css">
@@ -16,7 +16,6 @@
       <h1 class="site-title">
         <a href="index.html"><img src="img/logo.svg" alt="Furniture Design"></a>
       </h1>
-
       <nav id="navi">
         <ul class="nav-menu">
           <li><a href="products.html">PRODUCTS</a></li>
@@ -25,17 +24,14 @@
           <li><a href="mailto:xxxxx@xxx.xxx?subject=お問い合わせ">CONTACT</a></li>
         </ul>
       </nav>
-
       <div class="toggle_btn">
         <span></span>
         <span></span>
       </div>
-
       <div id="mask"></div>
     </header>
-
     <main>
-        <div class="content wrapper">
+        <div ckass="content wrapper">
             <h1 class="page-title">商品名</h1>
             <div id="item">
                 <div class="item-img">
@@ -43,15 +39,14 @@
                 </div>
                 <div class="item-text">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa reprehenderit, incidunt cum optio, ipsa aperiam quas officia sequi consectetur, nihil officiis sapiente perferendis! Culpa saepe aliquid dolorum voluptatibus recusandae excepturi?
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum eos neque quo dicta fuga. Rem magnam, vero accusamus quo aliquid in et pariatur dolore perferendis atque natus ducimus nihil non.
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis libero eligendi fugiat sint. Facere cumque hic voluptatibus a, perferendis, doloribus incidunt in ipsa modi cupiditate mollitia. Culpa voluptatem magni dicta.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga vitae molestias, officia sequi ullam eum vero animi atque necessitatibus molestiae amet fugit blanditiis a, provident in nulla laborum at pariatur.
                     </p>
                     <p>
-                        &yen;99,999 税抜
+                        &yen;99,999 税抜き
                     </p>
-
                     <dl>
                         <dt>SIZE:</dt>
                         <dd>Lサイズ</dd>
@@ -65,13 +60,5 @@
             <a href="products.html">商品一覧に戻る</a>
         </div>
     </main>
-    <footer id="footer" class="wrapper">
-      <ul class="menu">
-        <li><a href="https://www.instagram.com/" target="_blank">INSTAGRAM</a></li>
-        <li><a href="https://twitter.com/" target="_blank">TWITTER</a></li>
-        <li><a href="https://www.facebook.com/" target="_blank">FACEBOOK</a></li>
-      </ul>
-      <p class="copyright">&copy; Furniture Design</p>
-    </footer>
 </body>
 </html>
