--- a/company.html
+++ b/company.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <title>Furniture Design</title>
+    <meta name="description" content="テキストテキストテキストテキストテキストテキストテキスト">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="img/favicon.ico">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+    <link rel="stylesheet" href="style/style.css"> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/main.js"></script>
 </head>
+
 <body>
-    <a href="index.html">ホーム</a>
+    <header id="header" class="wrapper">
+        <h1 class="site-title">
+            <a href="index.html"><img src="img/logo.svg" alt="Furniture Design"></a>
+        </h1>
+
+        <nav id="navi">
+            <ul class="nav-menu">
+                <li><a href="products.html">PRODUCTS</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="company.html">COMPANY</a></li>
+                <li><a href="mailto:xxxxx@xxx.xxx?subject=お問い合わせ">CONTACT</a></li>
+            </ul>
+        </nav>
+
+        <div class="toggle_btn">
+            <span></span>
+            <span></span>
+        </div>
+
+        <div id="mask"></div>
+    </header>
+
+    <main>
+        <dl>
+            <dt>会社名</dt>
+            <dd>リッキー株式会社</dd>
+        </dl>
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3058.763231557256!2d141.0904419765803!3d39.946685471519245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f85174f6e3cca65%3A0x5dbd91c97185134!2z44OV44Oq44O844K544Oa44O844K544OX44Op44Km44OJ!5e0!3m2!1sja!2sjp!4v1749809490085!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </main>
+    <footer id="footer" class="wrapper">
+        <ul class="menu">
+            <li><a href="https://www.instagram.com/" target="_blank">INSTAGRAM</a></li>
+            <li><a href="https://twitter.com/" target="_blank">TWITTER</a></li>
+            <li><a href="https://www.facebook.com/" target="_blank">FACEBOOK</a></li>
+        </ul>
+        <p class="copyright">&copy; Furniture Design</p>
+    </footer>
 </body>
+
 </html>
